# TinyMLL

./: CMakeLists.txt  README.md
include/backend/cpu/: tensor_arithmetic.h
include/core/: allocator.h  arena.h  error.h  random.h  tensor.h  types.h
include/ops/: tensor_ops.h
include/utils/: tensor_checks.h
src/backend/cpu/: tensor_arithmetic.c
src/core/: allocator.c  arena.c  error.c  random.c  tensor.c
src/utils/: tensor_checks.c
tests/: CMakeLists.txt
tests/tensors/: tensor_arithmetic_test.c  tensor_creation_test.c
